# auth-app

./: .clang-format  .editorconfig  .gitignore  ANDROID_BUILD_STATUS.md  BUILD.md  BUILD_SIZES.md  FEATURES.md  README.md  analyze_output.txt  analyze_output2.txt  analyze_output3.txt  auth_app-plan.md  backup.sh  build_android.sh  build_desktop.sh  build_output.txt
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  main.yml  release.yml
android/: gradlew  settings.gradle
android/app/: build.gradle
desktop/: CMakeLists.txt  README.md
desktop/src/: base32.cpp  base32.h  encryption_engine.cpp  encryption_engine.h  main.cpp  totp_engine.cpp  totp_engine.h
desktop/tests/: CMakeLists.txt  test_main.cpp
flutter/: .metadata  README.md  analyze_output3.txt  analyze_output4.txt  analyze_output5.txt  pubspec.yaml
flutter/android/: build.gradle  key.properties  local.properties  settings.gradle
flutter/android/app/: build.gradle  proguard-rules.pro
flutter/assets/i18n/: en.json
flutter/assets/icons/: .gitkeep
flutter/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
flutter/ios/Runner/: GeneratedPluginRegistrant.m
flutter/lib/: main.dart
flutter/linux/: CMakeLists.txt  my_application.cc
flutter/test/: widget_test.dart
flutter/web/: index.html  manifest.json
scripts/: README.md  build.sh  build_android.sh  build_ubuntu.sh  build_web.sh  build_windows.sh  fix.sh  run.sh  setup-keystore.sh  test.sh
scripts/flutter/: build_android.sh  build_ios.sh  build_linux.sh  build_windows.sh  sign_android.sh
scripts/ios/: ExportOptions.plist
scripts/keystore/: keystore.properties
scripts/web/: build_web.sh  deploy_web.sh
web/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.test.tsx  App.tsx
web/src/hooks/: useTOTP.test.ts  useTOTP.ts
(+96 files in other folders)
